# sandia

./: .gitignore  COPYING  README.md  io.github.diegoivanme.Sandia.json  meson.build
build-aux/meson/: build-and-run.sh
data/: io.github.diegoivanme.Sandia.appdata.xml.in.in
po/: POTFILES
resources/: meson.build  sandia.gresource.xml  style.css
resources/ui/: ListItem.blp  ListItem.ui  MainWindow.blp  MainWindow.ui  TaskPage.blp  TaskPage.ui  TaskRow.ui
src/: Application.vala  ListItem.vala  MainWindow.vala  RowImage.vala  TaskPage.vala  TaskRow.vala  meson.build
src/Core/: Task.vala  TaskList.vala
src/Widgets/: ListItem.vala  RowImage.vala  TaskPage.vala  TaskRow.vala
src/resources/: meson.build  style.css
src/resources/ui/: ListItem.blp  ListItem.ui  MainWindow.blp  MainWindow.ui  TaskPage.ui
